[package]
authors     = ["Xavier Lau <c.estlavie@icloud.com>"]
description = "githuber"
edition     = "2021"
homepage    = "https://githuber.hack.ink"
license     = "GPL-3.0"
name        = "githuber"
readme      = "README.md"
repository  = "https://github.com/hack-ink/githuber"
version     = "0.3.0-alpha.1"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
derive_builder = { version = "0.11" }
isahc          = { version = "1.7" }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0" }
tracing        = { version = "0.1" }

[dev-dependencies]
isahc             = { version = "1.7", features = ["json"] }
pretty_env_logger = { version = "0.4" }
