[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "GitHub APIs"
edition     = "2021"
homepage    = "https://githuber.hack.ink"
license     = "GPL-3.0"
name        = "githuber"
readme      = "README.md"
repository  = "https://github.com/hack-ink/githuber"
version     = "0.4.0"

[dependencies]
