[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
categories  = ["web-programming::http-client"]
description = "A modern ergonomic GitHub REST API Rust binding."
edition     = "2021"
homepage    = "https://githuber.hack.ink"
keywords    = ["github", "github-api"]
license     = "GPL-3.0"
name        = "githuber"
readme      = "README.md"
repository  = "https://github.com/hack-ink/githuber"
version     = "0.4.4"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[dependencies]
# githuber
api-impl = { version = "0.4", path = "src/api/impl" }

[dev-dependencies]
# crates.io
anyhow             = { version = "1.0" }
reqwest            = { version = "0.12", features = ["json"] }
serde_json         = { version = "1.0" }
tokio              = { version = "1.38", features = ["macros"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[workspace]
members = [
	# githuber
	"src/api/impl",
]
