[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
description = "api-impl"
edition     = "2021"
homepage    = "https://githuber.hack.ink"
license     = "GPL-3.0"
name        = "api-impl"
readme      = "README.md"
repository  = "https://github.com/hack-ink/githuber"
version     = "0.4.4"

[lib]
proc-macro = true

[dependencies]
# crates.io
convert_case = { version = "0.6" }
quote        = { version = "1.0" }
syn          = { version = "2.0", features = ["full"] }

[features]
debug = [
	# crates.io
	"syn/extra-traits",
]
